--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -178,6 +178,39 @@ body{
 }
 
 
+.search{
+    /* background: red; */
+    position: relative;
+    width: max(300px, 50%);
+    margin: 0 auto;
+    margin-top: 10px;
+    padding: 15px 50px;
+    border-radius: 30px;
+    border: none;
+    outline: none;
+    font-size: 1.25rem;
+    color: #b95ce4;
+
+    &::placeholder{
+        color: #b95ce4;
+        font-weight: 600;
+    }
+
+    &::before{
+        position: absolute;
+        content: "🔍";
+        top: 0;
+        left: 0;
+        z-index: 100;
+
+    }
+
+
+
+
+}
+
+
 @media screen and (max-width: 400px) {
     
     main{
